--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -21,6 +24,7 @@ li {
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
+ 
 }
 .weather-app-wrapper {
   max-width: 600px;
@@ -52,5 +56,8 @@ li {
   top: -33px;
 }
 .float-left {
-    float: left;
+  float: left;
+}
+#description {
+  text-transform: capitalize;
 }
