--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,6 @@ li {
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
- 
 }
 .weather-app-wrapper {
   max-width: 600px;
@@ -62,3 +61,12 @@ li {
 #description::first-letter {
   text-transform: capitalize;
 }
+#celsius-link, #fahrenheit-link{
+  color: rgb(33, 33, 33);
+  cursor: default;
+  text-decoration: none;
+}
+
+
+
+
